# HealthRiskAI

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  nixpacks.toml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
api/: __init__.py  main.py
configs/: data_sources.yaml  model_config.yaml  simulation_config.yaml
data/: __init__.py
data/acquisition/: __init__.py  cdc_wonder.py  cli.py  clinicaltrials.py  cms_scraper.py  fda_faers.py  mimic_loader.py  pipeline.py  sec_edgar.py  who_gho.py
data/features/: __init__.py  clinical_features.py  feature_store.py  financial_features.py
data/processing/: __init__.py  cleaner.py  cohort.py  normaliser.py  splitter.py  validator.py
docs/: conf.py  index.rst
explainability/: __init__.py  counterfactual.py  lime_analyzer.py  model_cards.py  pdp.py  shap_analyzer.py
financial/: __init__.py
financial/credit_risk/: __init__.py  bond_spread_model.py  early_warning.py  hospital_scorecard.py  pd_model.py
financial/insurance/: __init__.py  ibnr_estimator.py  premium_pricer.py  risk_stratifier.py
financial/pharma/: __init__.py  patent_cliff_analyser.py  pipeline_monitor.py  portfolio_optimiser.py  rnpv_calculator.py
frontend/: angular.json  package-lock.json  package.json  vercel.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.html  app.component.ts  app.routes.ts
frontend/src/app/pages/credit-risk/: credit-risk.component.html  credit-risk.component.ts
frontend/src/app/pages/dashboard/: dashboard.component.html  dashboard.component.scss  dashboard.component.ts
frontend/src/app/pages/explainability/: explainability.component.html  explainability.component.ts
frontend/src/app/pages/insights/: insights.component.html  insights.component.scss  insights.component.ts
frontend/src/app/pages/insurance/: insurance.component.html  insurance.component.ts
frontend/src/app/pages/pharma/: pharma.component.html  pharma.component.ts
frontend/src/app/pages/pipeline/: pipeline.component.html  pipeline.component.scss  pipeline.component.ts
frontend/src/app/pages/risk/: risk.component.ts
frontend/src/app/pages/simulation/: simulation.component.html  simulation.component.scss  simulation.component.ts
frontend/src/app/services/: api.service.ts  mock-data.service.ts  theme.service.ts
frontend/src/app/shared/components/header/: header.component.ts
frontend/src/app/shared/components/kpi-card/: kpi-card.component.ts
frontend/src/app/shared/components/mobile-tabs/: mobile-tabs.component.ts
frontend/src/app/shared/components/nav-tabs/: nav-tabs.component.ts
frontend/src/app/shared/components/sidebar/: sidebar.component.html  sidebar.component.scss  sidebar.component.ts
models/: __init__.py  cli.py
models/clinical_nlp/: __init__.py  bert_classifier.py  complexity_scorer.py  ner_pipeline.py
models/ensemble/: __init__.py  cross_validator.py  evaluator.py  meta_learner.py
models/graph_network/: __init__.py  gat_model.py  graph_builder.py  trainer.py
models/survival/: __init__.py  cox_ph.py  deepsurv.py  dynamic_deephit.py  evaluator.py
models/tabular/: __init__.py  cost_predictor.py  hospital_default_model.py  lightgbm_claims.py  readmission_model.py  trainer.py
reports/: build_pdf.py  build_pdf_final.py  build_pdf_full.py  generate_figures.py  healthrisk_ai_article.tex  healthrisk_ai_research_article.md  research_article_part1.md  research_article_part2.md
simulation/: __init__.py  ai_opponent.py  cli.py  engine.py  portfolio_manager.py  scenario_generator.py  scoring.py
tests/: __init__.py  conftest.py  test_ensemble.py  test_explainability.py  test_financial.py  test_nlp.py  test_processing.py  test_simulation.py  test_survival.py  test_tabular.py
