[tool.poetry]
name = "healthrisk-ai"
version = "0.1.0"
description = "AI-driven health risk assessment platform integrating clinical NLP, graph networks, survival models, and financial risk analytics"
authors = ["HealthRisk AI Team <contact@healthrisk.ai>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/healthrisk-ai/healthrisk-ai"
repository = "https://github.com/healthrisk-ai/healthrisk-ai"
keywords = ["health-risk", "clinical-nlp", "survival-analysis", "insurance", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
packages = [
    { include = "data" },
    { include = "models" },
    { include = "financial" },
    { include = "simulation" },
    { include = "explainability" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

# ── Data manipulation ─────────────────────────────────────────────────────────
pandas = "==2.2.2"
numpy = "==1.26.4"
scipy = "==1.13.1"

# ── Machine learning core ──────────────────────────────────────────────────────
scikit-learn = "==1.5.1"
statsmodels = "==0.14.2"

# ── Deep learning ─────────────────────────────────────────────────────────────
torch = "==2.3.1"
transformers = "==4.42.4"
datasets = "==2.20.0"
tokenizers = "==0.19.1"
torch-geometric = "==2.5.3"

# ── Gradient boosting ─────────────────────────────────────────────────────────
xgboost = "==2.1.0"
lightgbm = "==4.4.0"
catboost = "==1.2.5"

# ── Survival analysis ─────────────────────────────────────────────────────────
lifelines = "==0.29.0"
pycox = "==0.3.0"
scikit-survival = "==0.23.0"

# ── Explainability ────────────────────────────────────────────────────────────
shap = "==0.45.1"
lime = "==0.2.0.1"

# ── MLOps ─────────────────────────────────────────────────────────────────────
mlflow = "==2.14.1"
wandb = "==0.17.4"
dvc = "==3.51.2"

# ── HTTP / data acquisition ───────────────────────────────────────────────────
requests = "==2.32.3"
httpx = "==0.27.0"
aiohttp = "==3.9.5"
beautifulsoup4 = "==4.12.3"
pdfplumber = "==0.11.1"

# ── Config / utilities ────────────────────────────────────────────────────────
python-dotenv = "==1.0.1"
pyyaml = "==6.0.1"
tqdm = "==4.66.4"
loguru = "==0.7.2"

# ── Testing ───────────────────────────────────────────────────────────────────
pytest = "==8.2.2"
pytest-cov = "==5.0.0"
pytest-asyncio = "==0.23.7"

# ── Linting / typing ──────────────────────────────────────────────────────────
ruff = "==0.5.1"
mypy = "==1.10.1"

# ── Clinical NLP ──────────────────────────────────────────────────────────────
medspacy = "==1.0.0"
spacy = "==3.7.5"

# ── Financial / actuarial ─────────────────────────────────────────────────────
chainladder = "==0.8.19"
quantlib = "==1.34"
riskfolio-lib = "==6.1.0"

# ── Visualization ─────────────────────────────────────────────────────────────
plotly = "==5.22.0"
matplotlib = "==3.9.1"
seaborn = "==0.13.2"

# ── Jupyter ───────────────────────────────────────────────────────────────────
ipykernel = "==6.29.5"
jupyter = "==1.0.0"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
pre-commit = "*"
faker = "*"

[tool.poetry.scripts]
healthrisk-ingest = "data.acquisition.cli:main"
healthrisk-train = "models.cli:main"
healthrisk-simulate = "simulation.cli:main"

# ── Ruff configuration ────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["data", "models", "financial", "simulation", "explainability", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
    "B008",  # do not perform function calls in default arguments
    "B905",  # zip() without explicit strict=
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG001", "ARG002", "S101"]
"notebooks/**" = ["E402", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["data", "models", "financial", "simulation", "explainability"]

# ── Black configuration ───────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

# ── isort configuration ───────────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["data", "models", "financial", "simulation", "explainability"]

# ── mypy configuration ────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torch_geometric.*",
    "transformers.*",
    "xgboost.*",
    "lightgbm.*",
    "catboost.*",
    "lifelines.*",
    "pycox.*",
    "sksurv.*",
    "shap.*",
    "lime.*",
    "mlflow.*",
    "wandb.*",
    "medspacy.*",
    "spacy.*",
    "chainladder.*",
    "QuantLib.*",
    "riskfolio.*",
    "plotly.*",
    "seaborn.*",
]
ignore_missing_imports = true

# ── pytest configuration ──────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-v",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=70",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
    "unit: marks unit tests",
    "gpu: marks tests requiring GPU",
]
asyncio_mode = "auto"

# ── Coverage configuration ────────────────────────────────────────────────────
[tool.coverage.run]
source = ["data", "models", "financial", "simulation", "explainability"]
omit = [
    "tests/*",
    "notebooks/*",
    "docs/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
